issue in register page , jobapply error fixed